test(test-util): add EitherAssert tests
(cherry picked from commit 873160feb583be4a21bd17ab90e08184ac0f3865)